--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-<!--    mvn clean deploy -X -s "C:\Users\lam\.m2\settings.xml"-->
+    <!--    mvn clean deploy -X -s "C:\Users\lam\.m2\settings.xml"-->
 
     <groupId>io.github.ln678090</groupId>
     <artifactId>jpalamsuidepzai</artifactId>
-    <version>1.0.0.4-SNAPSHOT</version>
+    <version>1.0.0.5-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>JpaUtil</name>
     <description>Thư viện JPA tiện ích của ln678090</description>
@@ -39,20 +39,35 @@
         <connection>scm:git:https://github.com/ln678090/jpalamsuidepzai.git</connection>
         <developerConnection>scm:git:https://github.com/ln678090/jpalamsuidepzai.git</developerConnection>
     </scm>
-<dependencies>
-    <dependency>
-        <groupId>jakarta.persistence</groupId>
-        <artifactId>jakarta.persistence-api</artifactId>
-        <version>3.2.0</version>
-    </dependency>
-    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-core</artifactId>
-        <version>7.1.7.Final</version>
-        <type>pom</type>
-    </dependency>
-
-</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>7.1.7.Final</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.20.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.17</version>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
